--- a/My own Vim Manual/VimTutor.tex
+++ b/My own Vim Manual/VimTutor.tex
@@ -46,7 +46,7 @@ By writing $$operator \quad [number] \quad motion$$ the operation $operator$ is 
 
 "$:help$" gives you generic help. \\
 
-\begin{tabular}{p{2.5cm} p{13cm}}
+\begin{tabular}{p{2.8cm} p{13cm}}
 i & to start the Insert mode \\
 a & to start the Insert mode at the consecutive cursor's position\\
 v & to start the Visual mode \\
@@ -74,7 +74,7 @@ $<---<--<-<------<--$ \hspace*{1cm} $--->-->->----------->$ \\
 \hspace*{5.2cm} ge \hspace*{0.6cm} ge  \hspace*{2cm} e \hspace*{1cm} e\\
 
 
-\begin{tabular}{p{2.5cm} p{13cm}}
+\begin{tabular}{p{2.8cm} p{13cm}}
 W (uppercase) & same than $w$, but jumps between spaces \\
 E (uppercase) & same than $e$, but jumps between spaces \\
 B (uppercase) & same than $b$, but jumps between spaces \\
@@ -84,8 +84,17 @@ gE (uppercase) & same than $ge$, but jumps between spaces \\
 \$ & moves the cursor to the end of the line \\
 f$<character>$ & moves forward in tyhe line where $<character>$ is. \\
  & This also admits a count. By "$3fl$" the cursor is moved to the third "$l$".\\
-F$<character>$ & same as "$f$", but it goes backward \\
 \end{tabular}
+\newpage
+\begin{tabular}{p{3cm} p{13cm}}
+F$<character>$ & same as "f", but it goes backward \\
+t$<character>$ & same as "f", but it goes to the caracter before at the searched one \\
+T$<character>$ & same as "t", but it goes backward \\
+\% & Maches the "()","{}" and "[]". \\
+$<numberpage>$G & Goes to the $<numberpage>$ page. \\
+
+\end{tabular}
+
 
 \newpage
 \section*{Set commands}
