--- a/My own Vim Manual/VimTutor.tex
+++ b/My own Vim Manual/VimTutor.tex
@@ -80,7 +80,10 @@ E(uppercase) & same than $e$, but jumps between spaces \\
 B(uppercase) & same than $b$, but jumps between spaces \\
 gE(uppercase) & same than $ge$, but jumps between spaces \\
 \hline
-asdf & asdf \\
+0(cero) & The cursor is moved to the beginning of the line \\
+"$\wedge$" & Moves the cursor to the first non-black character of the line. \\
+\$ & Locates the cursor at the end of the line. \\ 
+$<number>$\$ & Same as \$ but at the $<number>-th$ below the actual one.\\
 
 \end{tabular}
 
